Change java version to 11